# aauth-rs

./: Cargo.toml  LICENSE  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/httpsig/: Cargo.toml  README.md
crates/httpsig-policy/: Cargo.toml  README.md
crates/httpsig-policy/examples/: email_verification.rs
crates/httpsig-policy/src/: lib.rs
crates/httpsig-policy/tests/: policy.rs
crates/httpsig/examples/: sign_and_verify.rs
crates/httpsig/src/: algorithms.rs  error.rs  fields.rs  keys.rs  lib.rs  message.rs
crates/httpsig/tests/: signature_key.rs
examples/: challenge.rs  exchange_resource_token.rs  sign_request.rs  tokens.rs  verify_request.rs
src/: deferred.rs  egress.rs  errors.rs  headers.rs  http.rs  identifiers.rs  jwt.rs  lib.rs  metadata.rs  util.rs
src/agent/: challenge_handler.rs  mod.rs  poller.rs  signer.rs  token_exchange.rs
src/keys/: jwk.rs  jwks.rs  keypair.rs  mod.rs
src/resource/: challenge_builder.rs  mod.rs  token_issuer.rs  verifier.rs
src/signing/: algorithms.rs  base.rs  input.rs  key.rs  mod.rs  signature.rs  signer.rs  verifier.rs
src/tokens/: agent_token.rs  auth_token.rs  mod.rs  resource_token.rs
tests/: e2e_network.rs  e2e_signing.rs  protocol_tests.rs  security_tests.rs  signing_tests.rs
