[package]
name = "aauth-httpsig"
version = "0.1.0"
edition = "2021"
rust-version = "1.86"
description = "Framework-independent HTTP Message Signatures with Signature-Key support"
license = "Apache-2.0"
repository = "https://github.com/nolabs-ai/aauth-rs"
keywords = ["http-signatures", "rfc9421", "signature-key", "cryptography"]
categories = ["authentication", "web-programming"]

[lib]
name = "httpsig"

[dependencies]
base64 = "0.22"
ed25519-dalek = { version = "3", features = ["rand_core"] }
getrandom = { version = "0.4", features = ["sys_rng"] }
p256 = { version = "0.14", features = ["ecdsa"] }
p384 = { version = "0.14", features = ["ecdsa"] }
rand_core = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
thiserror = "2"
url = "2"
